Fix contact btn hover on mobile

--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -67,7 +67,11 @@
   }
 
   .desktop-contact-btn:after {
-    content: "";
+    content: "" !important;
+  }
+
+  .desktop-contact-btn:hover:after {
+    content: "" !important;
   }
 
   /* .mobile-contact-btn {
